# hermes

./: .gitignore  README.md  pyproject.toml
hermes/: Hermes.py  HermesMail.py  HermesMailBuilder.py  __init__.py  exceptions.py
tests/: test_Hermes.py  test_HermesMail.py
